# battleship

./: .gitignore  AGENTS.md  Cargo.toml  README.md  overview.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: ai.rs  bitboard.rs  board.rs  cli.rs  common.rs  config.rs  domain.rs  engine_api.rs  game.rs  interface_cli.rs  lib.rs  logging.rs  main.rs  player.rs  player_ai.rs  player_cli.rs  player_node.rs  prelude.rs  protocol.rs  ship.rs  skeleton.rs  stub.rs  transport.rs  transport_tcp.rs  ui.rs
src/cli/: interface.rs  mod.rs
src/core/: ai.rs  board.rs  common.rs  config.rs  game.rs  mod.rs  ship.rs
src/player/: ai.rs  cli.rs  mod.rs  node.rs
src/protocol/: domain.rs  mod.rs  skeleton.rs  stub.rs
src/transport/: ble.rs  heartbeat.rs  in_memory.rs  mod.rs  tcp.rs
tests/: ai_game_tests.rs  ai_transport_game.rs  bitboard_tests.rs  ble_transport_tests.rs  board_props.rs  board_tests.rs  cli_test.rs  cross_version_tests.rs  disconnect_reconnect_tests.rs  dropped_connection_tests.rs  fuzz_bincode_tests.rs  game_engine_props.rs  game_state_serialization.rs  heartbeat_integration_test.rs  in_memory_transport_tests.rs  malformed_frame_tests.rs  player_node_robustness_tests.rs  protocol_hardening_tests.rs  sequence_tests.rs  ship_tests.rs  sim_bin.rs  state_sync_tests.rs  tcp_game_test.rs  tcp_transport_tests.rs  transport_resilience_tests.rs  transport_tcp_tests.rs
