[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.9.1", default-features = false, features = ["alloc", "small_rng"] }
anyhow = { version = "1", default-features = false }

[features]
default = ["std"]
std = ["rand/thread_rng", "anyhow/std"]
