[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["tokio", "anyhow", "async-trait", "serde", "bincode"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
rand = "0.9.1"
tokio = { version = "1", features = ["macros", "net", "io-util", "rt-multi-thread"], optional = true }
anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
