[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.9.1", default-features = false, features = ["alloc", "small_rng"] }
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "sync", "rt-multi-thread"], optional = true, default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }
libm = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = ["rand/thread_rng", "anyhow/std", "tokio", "async-trait", "serde", "bincode"]
ble = ["std"]

[dev-dependencies]
proptest = "1"
